[package]
name = "smtp-server"
version = "0.1.0"
edition = "2021"


[dependencies]
mail-auth = { path = "/home/vagrant/code/mail-auth" }
mail-send = { path = "/home/vagrant/code/mail-send", default-features = false, features = ["cram-md5", "skip-ehlo"] }
mail-parser = { git = "https://github.com/stalwartlabs/mail-parser", features = ["full_encoding", "ludicrous_mode"] } 
mail-builder = { path = "/home/vagrant/code/mail-builder", features = ["ludicrous_mode"] } 
smtp-proto = { path = "/home/vagrant/code/smtp-proto" }
ahash = { version = "0.8" }
rustls = "0.20"
rustls-pemfile = "1.0"
tokio = { version = "1.23", features = ["full"] }
tokio-rustls = { version = "0.23"}
webpki-roots = { version = "0.22"}
sha1 = "0.10"
sha2 = "0.10.6"
rayon = "1.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
parking_lot = "0.12"
regex = "1.7.0"
dashmap = "5.4"
blake3 = "1.3"
lru-cache = "0.1.2"
rand = "0.8.5"
x509-parser = "0.14.0"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num_cpus = "1.15.0"
privdrop = "0.5.3"

[dev-dependencies]
mail-auth = { path = "/home/vagrant/code/mail-auth", features = ["test"] }
criterion = "0.4.0"
serial_test = "1.0.0"

[[bench]]
name = "hash"
harness = false

[features]
removeme = []
